--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
 
     <main>
 
-        <span id="title">GERADOR DE SENHA</span>
-        <p>Tamanho <span id="valor">15</span> caracteres</p>
-        <input type="range" id="slider" class="slider" min="5" max="25" value="15">
+        <span id="logo">GERADOR DE SENHA</span>
+        <p>Tamanho <span id="valor"></span> caracteres</p>
+        <input type="range" id="slider" class="slider" min="5" max="20" value="12">
         <button id="button">Gerar senha</button>
 
     </main>
 
     <div class="generated-password hide">
 
-        <span>Sua senha gerada foi:</span>
-        <span id="password">teste de senha gerada</span>
-        <span id="copy">Clique na senha para copiar.</span>
+        <span id="title">Sua senha gerada foi:</span>
+        <span id="password"></span>
+        <span id="copy">Clique na senha para copiar.👆</span>
 
     </div>
     
