--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Password Generator</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./styles/style.css" media="all">
+    <link rel="stylesheet" href="./styles/media-query.css" media="all">
     <script src="./script.js" defer></script>
 </head>
 <body>
